更新と削除と検査することができました

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,11 @@
-spring.jpa.hibernate.ddl-auto=none
-spring.datasource.url=jdbc:mysql://localhost:3306/form?autoReconnect=true&useSSL=false&serverTimezone=JST
+spring.datasource.url=jdbc:mysql://localhost:3306/employee_data?autoReconnect=true&useSSL=false&serverTimezone=JST
 spring.datasource.username=root
 spring.datasource.password=root
-
-spring.jpa.hibernate.use-new-id-generator-mappings=false
+hibernate.dialect=org.hibernate.dialect.MySQLDialect
+hibernate.format_sql=false
+spring.thymeleaf.mode: html
+spring.session.store-type=jdbc
+spring.session.jdbc.initialize-schema=always
+spring.session.timeout.seconds=900
+spring.jpa.show-sql=false
+spring.jpa.hibernate.use-new-id-generator-mappings= false
